<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_title_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="cs.pacificu.edu.spritandroidimals.title_screen">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/title"
                    android:id="@+id/imageView2"
                    android:contentDescription=""
                    tools:ignore="ContentDescription"/>

            <Button
                    android:text="@string/start_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnStartGame"
                    android:onClick="startGame"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/imageView2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    tools:ignore="ObsoleteLayoutParam"/>

            <Button
                    android:text="@string/sHighScores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnHighScore"
                    android:onClick="startScores"
                    />

            <Button
                    android:text="@string/map_editor_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/map_editor"
                    android:onClick="mapEditor"/>

            <Button
                    android:text="@string/sSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSettings"
                    android:onClick="settings"/>

            <Button
                    android:text="@string/sAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAbout"
                    android:onClick="about"
                    />

            <Button
                    android:text="@string/sExit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnExit"
                    android:onClick="exitGame"
                    />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
